<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hk.ust.cse.comp4521.poialert.POIAlertActivity">
    <item android:id="@+id/action_add_poi" android:title="@string/action_add_poi"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_poi" android:title="@string/action_update_poi"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete_poi" android:title="@string/action_delete_poi"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
